--- a/public/layout.twig
+++ b/public/layout.twig
@@ -4,12 +4,14 @@
     <title></title>
     <link rel="stylesheet" href="css/app.css" />
 
-    <script type="text/javascript" src="libs/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="libs/knockout-3.0.0.js"></script>
-    <script type="text/javascript" src="libs/FileSaver.js"></script>
+    <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.css" />
 
-    <script type="text/javascript" src="out/out.js"></script>
+    <script type="text/javascript" src="/libs/jquery-1.10.2.min.js"></script>
+    <script src="/libs/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/libs/knockout-3.0.0.js"></script>
+    <script type="text/javascript" src="/libs/FileSaver.js"></script>
 
+    <script type="text/javascript" src="/out/out.js"></script>
 </head>
 
 
